--- a/dataNode/nodoConfig.cfg
+++ b/dataNode/nodoConfig.cfg
@@ -2,4 +2,4 @@ IP_FILESYSTEM=127.0.0.1
 PUERTO_FILESYSTEM=6667
 ID_NODO=9
 PUERTO_WORKER=6668
-RUTA_DATABIN=/home/utnso/thePonchos/data
+RUTA_DATABIN=/home/utnso/thePonchos/data.bin
