Agrego hilo que obtiene un socket conectado a yama para enviar info de nodos conectados. Agrego variable global con ip del yama que se setea cuando se conecta el yama por primera vez en el hilo para enviar archivos. Falta hacer pruebas

--- a/fileSystem/fsConfig.cfg
+++ b/fileSystem/fsConfig.cfg
@@ -2,4 +2,5 @@ PUERTO=6667
 PATH_METADATA=/home/utnso/thePonchos/metadata
 CANTIDAD_NODOS_ESPERADOS=2
 PUERTO_YAMA=6670
-PUERTO_WORKERS=6665
+PUERTO_WORKERS=6668
+PUERTO_YAMANODOS=6669
