--- a/yama/YAMAconfig.cfg
+++ b/yama/YAMAconfig.cfg
@@ -1,7 +1,7 @@
 FS_IP=127.0.0.1
 FS_PUERTO=6667
 JOB=1
-RETARDO_PLANIFICACION=
+RETARDO_PLANIFICACION=0
 ALGORITMO_BALANCEO=1
 DISPONIBILIDAD_BASE=1
 SOCKET_FS_NODOS=6669
