trabajando con las conexiones. Por el momento se conecta bien al fs pero cuando el fs se quiere conectar al hilo de infonodos da conexion refused. Modifique el config para que tenga en cuenta puertos e ip del fs

--- a/yama/YAMAconfig.cfg
+++ b/yama/YAMAconfig.cfg
@@ -1,8 +1,8 @@
 FS_IP=127.0.0.1
-FS_PUERTO=6667
+FS_PUERTO=6671
 JOB=1
 RETARDO_PLANIFICACION=0
 ALGORITMO_BALANCEO=1
 DISPONIBILIDAD_BASE=1
-SOCKET_FS_NODOS=6669
+PUERTO_FS_NODOS=6669
 SOCKET_MASTERS=6670
