mas arreglos para recibir nodos de fs

--- a/yama/src/YAMAconfig.cfg
+++ b/yama/src/YAMAconfig.cfg
@@ -1,8 +1,8 @@
-JOB=1
-DISPONIBILIDAD_BASE=1
 FS_IP=192.168.1.149
+FS_PUERTO=6671
+JOB=1
 RETARDO_PLANIFICACION=0
 ALGORITMO_BALANCEO=1
-PUERTO_MASTERS=6670
-FS_PUERTO=6671
+DISPONIBILIDAD_BASE=1
 PUERTO_FS_NODOS=6669
+SOCKET_MASTERS=6670
