Cambio estructura de nodo. Ahora master y dataNode estan en una misma carpeta. Se compilan con un solo archivo y los ejecutables estan en la carpeta nodo con el mismo config

--- a/nodo/dataNode/makefile
+++ b/nodo/dataNode/makefile
@@ -4,7 +4,7 @@ all: dataNode
 
 dataNode:
 	@echo 'Building dataNode'
-	gcc src/*.c -o dataNode -lcommons -lutils
+	gcc src/*.c -o DataNode -lcommons -lutils
 
 
 install:
