Creo instalador y limpiador. El instalador descarga commons e instala. Instala utils. Compila todos los modulos y mueve los scripts a la carpeta thePonchos creada

--- a/nodo/worker/makefile
+++ b/nodo/worker/makefile
@@ -38,7 +38,7 @@ worker: $(OBJS) $(USER_OBJS) /home/utnso/workspace/utils/Debug/libutils.so
 
 # Other Targets
 clean:
-	-$(RM) $(OBJS)$(C_DEPS)$(EXECUTABLES) worker
+	-$(RM) $(OBJS)$(C_DEPS)$(EXECUTABLES) Worker
 	-@echo ' '
 
 .PHONY: all clean dependents
