--- a/nodo/nodoConfig.cfg
+++ b/nodo/nodoConfig.cfg
@@ -1,6 +1,7 @@
-IP_FILESYSTEM=127.0.0.1
+IP_FILESYSTEM=192.168.1.149
 PUERTO_FILESYSTEM=6667
 ID_NODO=9
 PUERTO_WORKER=6668
-RUTA_DATABIN=/home/utnso/thePonchos/data
+RUTA_DATABIN=/home/utnso/thePonchos/data.bin
 PUERTO_DATANODE=6669
+RUTA_TEMPORALES=/home/utnso/thePonchos
