--- a/nodo/nodoConfig.cfg
+++ b/nodo/nodoConfig.cfg
@@ -5,3 +5,4 @@ PUERTO_WORKER=6668
 RUTA_DATABIN=/home/utnso/thePonchos/data.bin
 PUERTO_DATANODE=6669
 RUTA_TEMPORALES=/home/utnso/thePonchos
+BLOQUES_TOTALES=0
