--- a/nodo/nodoConfig.cfg
+++ b/nodo/nodoConfig.cfg
@@ -4,4 +4,5 @@ ID_NODO=2
 PUERTO_WORKER=6668
 RUTA_DATABIN=/home/utnso/thePonchos/data.bin
 PUERTO_DATANODE=6669
-RUTA_TEMPORALES=/home/utnso/thePonchos/tmp
+RUTA_TEMPORALES=/home/utnso/thePonchos
+BLOQUES_TOTALES=300
