--- a/nodo/nodoConfig.cfg
+++ b/nodo/nodoConfig.cfg
@@ -1,6 +1,7 @@
-IP_FILESYSTEM=192.168.1.113
+IP_FILESYSTEM=127.0.0.1
 PUERTO_FILESYSTEM=6667
-ID_NODO=2
+PUERTO_FS_WORKER=6672
+ID_NODO=1
 PUERTO_WORKER=6668
 RUTA_DATABIN=/home/utnso/thePonchos/data.bin
 PUERTO_DATANODE=6669
