--- a/yama/YAMAconfig.cfg
+++ b/yama/YAMAconfig.cfg
@@ -1,7 +1,7 @@
-JOB=1
+JOB=103
 DISPONIBILIDAD_BASE=1
-FS_IP=192.168.1.149
-RETARDO_PLANIFICACION=0
+FS_IP=192.168.3.30
+RETARDO_PLANIFICACION=10000000
 ALGORITMO_BALANCEO=1
 PUERTO_MASTERS=6670
 FS_PUERTO=6671
